src/objects/Partner_Office__c.object
<CustomObject>
    <fields>
        <fullName>Biz_Champion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Biz Champion</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner Offices (Biz Champion)</relationshipLabel>
        <relationshipName>Partner_Offices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Biz__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Have we closed business with this partner?</description>
        <label>Closed Biz</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Have they signed a partner agreement with VMTurbo?</description>
        <label>Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>CAN</fullName>
                </value>
                <value>
                    <fullName>GBR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Download_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do they have a custom download link?</description>
        <label>Download Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Download__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Have they downloaded VMTurbo into their own environment?</description>
        <label>Download</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Initial engagement with VMTurbo</description>
        <label>Initial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Have we developed joint marketing materials?</description>
        <label>Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Partner_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parent Partner Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Reseller, Reseller - Current, Technology Partner</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Offices</relationshipLabel>
        <relationshipName>Partner_Offices</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Office_Safe_ID__c</fullName>
        <formula>Casesafeid(Id)</formula>
        <label>Partner Office Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Portal_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Have they been set up with Portal access &amp; know how to log in?</description>
        <label>Portal Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>Green - Strong Relationship
Yellow - Early Stages of Engagement, Looking Up
Red - Trending Down or Limited Engagement</description>
        <inlineHelpText>Green - Strong Relationship
Yellow - Early Stages of Engagement, Looking Up
Red - Trending Down or Limited Engagement</inlineHelpText>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-Untouched-</fullName>
                    <default>true</default>
                    <label>-Untouched-</label>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registered_Biz__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registered Biz</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Have they been through a sales training with VMTurbo?</description>
        <label>Sales Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_Line_2__c</fullName>
        <label>Street Address (Line 2)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Champion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tech Champion</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner Offices</relationshipLabel>
        <relationshipName>Partner_Offices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tech_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Have they been through a technical training with VMTurbo?</description>
        <label>Tech Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Territory_Coverage__c</fullName>
        <label>Territory Coverage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>District of Columbia (Washington DC)</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_Prop__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Have they been trained on and can they effectively articulate VMTurbo&apos;s Value Prop?</description>
        <label>Value Prop</label>
        <type>Checkbox</type>
    </fields>
    <label>Partner Office</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Parent_Partner_Account__c</columns>
        <columns>NAME</columns>
        <columns>State_Province__c</columns>
        <columns>Country__c</columns>
        <columns>Territory_Coverage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Partner_Offices</fullName>
        <columns>NAME</columns>
        <columns>Rating__c</columns>
        <columns>State_Province__c</columns>
        <columns>Closed_Biz__c</columns>
        <columns>Registered_Biz__c</columns>
        <columns>Value_Prop__c</columns>
        <columns>Download__c</columns>
        <columns>Contract__c</columns>
        <columns>Portal_Access__c</columns>
        <columns>Tech_Training__c</columns>
        <columns>Sales_Training__c</columns>
        <columns>Marketing__c</columns>
        <columns>Download_Link__c</columns>
        <columns>Tech_Champion__c</columns>
        <columns>Biz_Champion__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Partner Offices</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Partner_Offices</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>State_Province__c</columns>
        <columns>Closed_Biz__c</columns>
        <columns>Registered_Biz__c</columns>
        <columns>Value_Prop__c</columns>
        <columns>Download__c</columns>
        <columns>Contract__c</columns>
        <columns>Portal_Access__c</columns>
        <columns>Tech_Training__c</columns>
        <columns>Sales_Training__c</columns>
        <columns>Marketing__c</columns>
        <columns>Download_Link__c</columns>
        <columns>Tech_Champion__c</columns>
        <columns>Biz_Champion__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Partner Offices</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Partner Office Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Offices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>